--- a/better_stockpiles/manifest.json
+++ b/better_stockpiles/manifest.json
@@ -5,22 +5,8 @@
 	},
 	"default_locale" : "en",
 	"mixintos" :  {
-		"stonehearth/entities/food/poyo_feed/poyo_feed/poyo_feed.json" : "file(entities/food/animal_feed/poyo_feed.json)",
-		"stonehearth/entities/food/rabbit_feed/rabbit_feed.json" : "file(entities/food/animal_feed/rabbit_feed.json)",
-		"stonehearth/entities/food/sheep_feed/sheep_feed.json" : "file(entities/food/animal_feed/sheep_feed.json)",
+		"stonehearth/ui/data/stockpile_filters.json": "file(ui/stockpile_filters.json)",
 		
-		"stonehearth/entities/food/wheat_bale/wheat_bale.json" : "file(entities/food/grains/wheat_bale.json)",
-		"stonehearth/entities/containers/wheat_pile/wheat_pile_ghost.json" : "file(entities/food/grains/wheat_pile_ghost.json)",
-		
-		"stonehearth/entities/food/egg/egg.json" : "file(entities/food/raw_ingredients/egg.json)",
-		"stonehearth/entities/food/mutton/mutton.json" : "file(entities/food/raw_ingredients/mutton.json)",
-		"stonehearth/entities/food/poyo_meat/poyo_meat.json" : "file(entities/food/raw_ingredients/poyo_meat.json)",
-		"stonehearth/entities/food/meat_tagine/meat_tagine/meat_tagine.json" : "file(entities/food/raw_ingredients/meat_tagine.json)",
-		"stonehearth/mixins/food/jerky/jerky.json" : "file(entities/food/raw_ingredients/jerky.json)",
-		
-		"stonehearth/entities/decoration/fur_rug/fur_rug.json" : "file(entities/construction/decorations/fur_rug.json)"
-	},
-	"overrides" : {
-		"stonehearth/ui/data/stockpile_filters.json": "file(ui/stockpile_filters.json)"
+		"stonehearth/entities/decoration/fur_rug/fur_rug.json" : "file(entities/fur_rug.json)"
 	}
 }
