--- a/better_stockpiles/manifest.json
+++ b/better_stockpiles/manifest.json
@@ -9,6 +9,13 @@
 		"stonehearth/entities/consumables/courage_tonic/courage_tonic.json": "file(entities/consumables/tonics/courage_tonic.json)",
 		"stonehearth/entities/consumables/energy_tonic/energy_tonic.json": "file(entities/consumables/tonics/energy_tonic.json)",
 		"stonehearth/entities/consumables/stamina_tonic/stamina_tonic.json": "file(entities/consumables/tonics/stamina_tonic.json)",
-		"stonehearth/entities/consumables/strength_tonic/strength_tonic.json": "file(entities/consumables/tonics/strength_tonic.json)"
+		"stonehearth/entities/consumables/strength_tonic/strength_tonic.json": "file(entities/consumables/tonics/strength_tonic.json)",
+		"stonehearth/entities/food/rotten_basket/rotten_basket.json": "file(entities/food/rotten_food/rotten_basket.json)",
+		"stonehearth/entities/food/rotten_egg/rotten_egg.json": "file(entities/food/rotten_food/rotten_egg.json)",
+		"stonehearth/entities/food/rotten_jerky/rotten_jerky.json": "file(entities/food/rotten_food/rotten_jerky.json)"
+	},
+	"overrides":
+	{
+		"stonehearth/ui/game/modes/zones_mode/stockpile/stockpile.less" : "file(ui/stockpile.less)"
 	}
 }
