--- a/better_stockpiles/manifest.json
+++ b/better_stockpiles/manifest.json
@@ -1,10 +1,10 @@
 {
 	"info": {
-		"name": "better_stockpiles",
+		"name": "Better Stockpiles",
 		"version": 3
 	},
-	"default_locale" : "en",
-	"mixintos" :  {
+	"default_locale": "en",
+	"mixintos": {
 		"stonehearth/ui/data/stockpile_filters.json": "file(ui/stockpile_filters.json)",
 		"stonehearth/entities/consumables/courage_tonic/courage_tonic.json": "file(entities/consumables/tonics/courage_tonic.json)",
 		"stonehearth/entities/consumables/energy_tonic/energy_tonic.json": "file(entities/consumables/tonics/energy_tonic.json)",
