--- a/frostfeast_bs/manifest.json
+++ b/frostfeast_bs/manifest.json
@@ -1,6 +1,6 @@
 {
 	"info": {
-		"name": "Better Stockpiles Patch for Frostfeast",
+		"name": "frostfeast_bs",
 		"version": 3
 	},
 	"default_locale": "en",
