--- a/brewerymod_bs/manifest.json
+++ b/brewerymod_bs/manifest.json
@@ -1,6 +1,6 @@
 {
 	"info": {
-		"name": "Better Stockpiles Patch for Brewerymod",
+		"name": "brewerymod_bs",
 		"version": 3
 	},
 	"default_locale": "en",
