--- a/candledark_bs/manifest.json
+++ b/candledark_bs/manifest.json
@@ -1,6 +1,6 @@
 {
 	"info": {
-		"name": "Better Stockpiles Patch for Candledark",
+		"name": "candledark_bs",
 		"version": 3
 	},
 	"default_locale": "en",
