--- a/cookmod_bs/manifest.json
+++ b/cookmod_bs/manifest.json
@@ -1,6 +1,6 @@
 {
 	"info": {
-		"name": "Better Stockpiles Patch for Cookmod",
+		"name": "cookmod_bs",
 		"version": 3
 	},
 	"default_locale": "en",
