--- a/brewerymod_bs/manifest.json
+++ b/brewerymod_bs/manifest.json
@@ -11,6 +11,12 @@
 		
 		"brewerymod/entities/food/sugarcanebundle/sugarcanebundle.json": "cookmod_bs/entities/food/crop.json",
 		
-		"brewerymod/entities/food/apple_pie/apple_pie/apple_pie.json": "better_stockpiles/entities/food/prepared_vege.json"
+		"brewerymod/entities/food/apple_pie/apple_pie/apple_pie.json": "better_stockpiles/entities/food/prepared_vege.json",
+		
+		"brewerymod/entities/plants/allium/allium_ghost.json": "better_stockpiles/entities/plants/herb.json",
+		"brewerymod/entities/plants/blueberry/blueberry_ghost.json": "better_stockpiles/entities/plants/herb.json",
+		"brewerymod/entities/plants/mushroom/mushroom_ghost.json": "better_stockpiles/entities/plants/herb.json",
+		"brewerymod/entities/plants/roses/roses_ghost.json": "better_stockpiles/entities/plants/herb.json",
+		"brewerymod/entities/plants/strawberry/strawberry_ghost.json": "better_stockpiles/entities/plants/herb.json"
 	}
 }
