--- a/cookmod_bs/manifest.json
+++ b/cookmod_bs/manifest.json
@@ -14,6 +14,8 @@
 		"cookmod/entities/construction/apiary/apiary_iconic.json": "cookmod_bs/entities/construction/food_source.json",
 		"cookmod/entities/construction/well/well_ghost.json": "cookmod_bs/entities/construction/food_source.json",
 		"cookmod/entities/construction/well/well_iconic.json": "cookmod_bs/entities/construction/food_source.json",
+		"cookmod/entities/construction/rickety_well/rickety_well_ghost.json": "cookmod_bs/entities/construction/food_source.json",
+		"cookmod/entities/construction/rickety_well/rickety_well_iconic.json": "cookmod_bs/entities/construction/food_source.json",
 		
 		"cookmod/entities/critters/bees/queen/queen.json": "cookmod_bs/entities/wealth/trophy.json",
 		
